# adk-rust

./: .devenv.flake.nix  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  REPORT.md  REVIEW_agileops_voice_gateway_837.md  autofix.py  build_errors.txt  cargo_msgs.json  check_auth.rs  devenv.nix  fix-clippy.sh  fix-db.sh  fix-tests-2.sh  fix-tests.sh  fix-vertex.sh  fix_agent_context.py  fix_agent_tests2.py  fix_agent_tests3.py  fix_agent_tests4.py  fix_agent_tests5.py  fix_agent_tests6.py  fix_agent_tests7.py  fix_agent_tests8.py  fix_client.py  fix_client_2.py  fix_client_3.py  fix_client_4.py  fix_examples.patch  fix_graph_exec.py  fix_graph_lib_tests.py  fix_graph_tests.py  fix_rust_ids.py  install_devenv.sh  install_nix.sh  modify_files.py  modify_studio_cargo.py  (+17 more)
.cargo/: config.toml
.devenv/: devenv.json  flake.json  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
.devenv/gc/: shell  shell-1-link  task-config
.github/workflows/: ci.yml  mistralrs-tests.yml
adk-agent/: Cargo.toml  README.md
adk-agent/examples/: agent_control_demo.rs  state_management_demo.rs
adk-agent/src/: compaction.rs  custom_agent.rs  lib.rs  llm_agent.rs  skill_shim.rs  tool_call_markup.rs  util.rs
adk-agent/tests/: agent_callback_tests.rs  callback_integration_test.rs  callback_integration_tests.rs  compaction_tests.rs  context_propagation_test.rs  custom_agent_tests.rs  integration_test.rs  llm_agent_tests.rs  mcp_integration_test.rs  multi_agent_test.rs  streaming_test.rs  test_context.rs  tool_callback_tests.rs  tool_confirmation_tests.rs  workflow_tests.rs
adk-anthropic/: Cargo.toml  README.md
adk-anthropic/examples/: custom_base_url.rs
adk-anthropic/src/: pricing.rs
adk-artifact/: README.md
adk-artifact/src/: inmemory.rs  scoped.rs
adk-artifact/tests/: artifact_tests.rs
adk-audio/: Cargo.toml
adk-audio/src/: codec.rs  frame.rs  mixer.rs
adk-audio/tests/: bug_condition_silent_streams_test.rs  codec_capability_tests.rs  frame_property_tests.rs  fxchain_property_tests.rs  mixer_property_tests.rs  pipeline_property_tests.rs  preservation_batch_transcription_test.rs  (+3 more)
adk-awp/: Cargo.toml
adk-browser/: README.md
adk-cli/: Cargo.toml  README.md
adk-core/: Cargo.toml  README.md
adk-doc-audit/: Cargo.toml
adk-eval/: README.md
adk-gemini/: Cargo.toml  README.md  fix_examples_v2.py  fix_examples_v3.py
adk-gemini/examples/: advanced.rs  basic_generation.rs  basic_streaming.rs  batch_cancel.rs  batch_delete.rs  batch_embedding.rs  batch_generate.rs  batch_list.rs  blob.rs  cache_basic.rs  complex_function.rs  curl_equivalent.rs  curl_google_search.rs  custom_base_url.rs  custom_models.rs  embedding.rs  error_handling.rs  files_delete_all.rs  files_lifecycle.rs  gemini_pro_example.rs  generation_config.rs  google_search.rs  google_search_with_functions.rs  http_client_builder.rs  image_editing.rs  image_generation.rs  mp4_describe.rs  multi_speaker_tts.rs  simple.rs  simple_image_generation.rs  simple_speech_generation.rs  simple_thought_signature.rs  streaming.rs  structured_response.rs  test_api.rs  text_thought_signature_example.rs  thinking_advanced.rs  thinking_basic.rs  thinking_curl_equivalent.rs  thought_signature_example.rs  (+4 more)
adk-gemini/src/: builder.rs  client.rs  error.rs  inspect.rs  lib.rs  macros.rs  mapper.rs  models.rs  provider.rs  response_parsing_tests.rs  tests.rs  types.rs  vertex.rs
adk-gemini/src/backend/: mod.rs  studio.rs  vertex.rs  vertex.rs.cache_impl
adk-gemini/src/batch/: handle.rs  model.rs
adk-gemini/src/cache/: builder.rs
adk-gemini/src/common/: model.rs
adk-gemini/src/embedding/: builder.rs  model.rs
adk-gemini/src/files/: model.rs
adk-gemini/src/generation/: builder.rs  model.rs
adk-gemini/src/tools/: model.rs
adk-gemini/tests/: multimodal_fn_response_tests.rs  response_parsing_tests.rs
adk-graph/: README.md
adk-guardrail/: README.md
adk-memory/: README.md
adk-mistralrs/: .gitignore  Cargo.toml  README.md
adk-model/: Cargo.toml  README.md
adk-rag/: Cargo.toml
adk-realtime/: Cargo.toml  README.md  SESSION_ARCHITECTURE.md  gemini_tts.pcm
adk-runner/: Cargo.toml  README.md
adk-rust/: Cargo.toml  README.md
adk-rust-macros/: Cargo.toml
adk-sandbox/: Cargo.toml
adk-server/: Cargo.toml  README.md
adk-session/: README.md
adk-skill/: README.md
adk-spatial-os/: README.md
adk-studio/: Cargo.toml
adk-telemetry/: Cargo.toml  README.md
adk-telemetry/src/: init.rs  langsmith.rs  lib.rs  memory.rs  span_exporter.rs  spans.rs  trace_context.rs
adk-tool/: Cargo.toml  README.md
adk-ui/: Cargo.toml  README.md
adk-ui/src/: lib.rs  protocol_capabilities.rs  schema.rs  templates.rs  toolset.rs  validation.rs
adk-ui/src/interop/: ag_ui.rs  mcp_apps.rs  mod.rs  surface.rs
adk-ui/src/kit/: generator.rs  mod.rs  spec.rs
adk-ui/src/model/: mod.rs
adk-ui/src/tools/: mod.rs  protocol_output.rs  render_card.rs  render_chart.rs  render_confirm.rs  render_form.rs  render_kit.rs  render_layout.rs  render_modal.rs  render_page.rs  render_progress.rs  render_screen.rs  render_table.rs  render_toast.rs
adk-ui/tests/: a2ui_compat_tests.rs  catalog_tests.rs  legacy_tool_protocol_tests.rs  protocol_schema_tests.rs  tool_protocol_matrix_tests.rs
docs/: ADK-STUDIO-GRAPH-DESIGN.md  PROJECT_REVIEW_2025-12-11.md
examples/: Cargo.toml  README.md
examples/desktop_agent/: .env.example  Cargo.toml
examples/desktop_agent/src/: main.rs
examples/ralph_autonomous_agent/: Cargo.toml  README.md  agents.rs  main.rs
examples/ralph_autonomous_agent/src/: lib.rs  main.rs
examples/ralph_autonomous_agent/src/agents/: worker_agent.rs
scripts/: check-cargo-adk-templates.sh  check-doc-examples.py  check-doc-examples.sh  check-example-name-collisions.sh
(+600 files in other folders)
