[package]
name = "adk-gemini"
version.workspace = true
edition = "2024"
description = "Rust client for Google Gemini API"
readme = "README.md"
keywords = ["gemini", "embed", "google", "ai", "client"]
categories = ["api-bindings"]
license = "MIT"
repository = "https://github.com/zavora-ai/adk-rust"

[lib]
name = "adk_gemini"
path = "src/lib.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[dependencies]
async-stream = "0.3"
async-trait = "^0.1"
futures = "^0.3.1"
futures-util = "^0.3"
schemars = "1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
snafu = { version = "0.8", features = ["backtrace"] }
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }
tokio = { version = "1", features = ["io-util"] }
tracing = "0.1.41"
tonic = { version = "0.14", features = ["transport", "tls-native-roots"] }
tower = "0.4"
http-body-util = "0.1"
http-body = "1"
http = "1"
bytes = "1"

# Google Cloud Dependencies
googleapis-tonic-google-cloud-aiplatform-v1 = "0.75.0"
google-cloud-auth = "0.13"
google-cloud-token = "0.1"

[dev-dependencies]
display-error-chain = "0.2"
tokio = { version = "^1.47", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
