[package]
name = "adk-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "OpenTelemetry integration for Rust Agent Development Kit (ADK-Rust) agent observability"
repository = "https://github.com/zavora-ai/adk-rust"
documentation = "https://docs.rs/adk-telemetry"
keywords = ["ai", "agent", "adk", "telemetry", "tracing"]
categories = ["api-bindings", "development-tools::debugging"]
readme = "README.md"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["metrics"] }
tracing-opentelemetry = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono.workspace = true
reqwest.workspace = true
langsmith-rust = { version = "0.1.3", optional = true }
tokio = "1.0"
adk-core.workspace = true

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros", "time"] }

[features]
langsmith = ["dep:langsmith-rust"]
langsmith-rust = ["dep:langsmith-rust"]
