[package]
name = "adk-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Dynamic UI generation for Rust Agent Development Kit (ADK-Rust) agents - render forms, cards, tables, charts and more"
repository = "https://github.com/zavora-ai/adk-rust"
documentation = "https://docs.rs/adk-ui"
keywords = ["ai", "agent", "ui", "generative", "adk"]
categories = ["api-bindings", "gui"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
schemars = "0.8"
async-trait = "0.1"
adk-core = { path = "../adk-core", version = "0.1" }
