[package]
name = "desktop-agent-example"
version = "0.0.1"
edition = "2024"
publish = false

[workspace]

[dependencies]
adk-core = { path = "../../adk-core" }
adk-agent = { path = "../../adk-agent" }
adk-model = { path = "../../adk-model", features = ["gemini"] }
adk-gemini = { path = "../../adk-gemini" }
adk-tool = { path = "../../adk-tool", features = ["mcp"] }
adk-runner = { path = "../../adk-runner" }
adk-session = { path = "../../adk-session" }
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
