[package]
name = "ralph_autonomous_agent"
version.workspace = true
edition.workspace = true
publish = false
description = "Autonomous agent loop that runs until all PRD items are complete"

[[bin]]
name = "ralph_autonomous_agent"
path = "src/main.rs"

[dependencies]
adk-core = { path = "../../adk-core" }
adk-agent = { path = "../../adk-agent" }
adk-model = { path = "../../adk-model" }
adk-tool = { path = "../../adk-tool" }
adk-cli = { path = "../../adk-cli" }
adk-runner = { path = "../../adk-runner" }
adk-session = { path = "../../adk-session" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy = "0.15"
colored = "3"
