[package]
name = "ralph_autonomous_agent"
version = "0.1.0"
edition = "2021"
authors = ["James Karanja Maina <james.karanja@zavora.ai>"]
description = "A production-ready autonomous agent example using ADK-Rust"
license = "Apache-2.0"
publish = false

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
clap = { version = "4.4", features = ["derive"] }
anyhow = { workspace = true }
async-trait = { workspace = true }

# ADK internal crates
adk-core = { path = "../../adk-core" }
adk-agent = { path = "../../adk-agent" }

[dev-dependencies]
proptest = "1.4"
